--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Ten Minutes From Hell - 11 Minute High-Intensity Workout Timer</title>
+    <title>Ten Minutes From Hell - The Only Timer Your Workout Needs</title>
     
     <!-- Structured Data -->
     <script type="application/ld+json">
