--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Ten Minutes From Hell - High-intensity workout timer with 11 exercises. Complete a full-body workout in just 11 minutes and 15 seconds. Start your fitness journey today!"
+      content="HIITem - High-intensity workout timer with 11 exercises. Complete a full-body workout in just 11 minutes and 15 seconds. Start your fitness journey today!"
     />
-    <meta name="author" content="Ten Minutes From Hell" />
+    <meta name="author" content="HIITem" />
     <meta name="robots" content="index, follow" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -34,16 +34,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Ten Minutes From Hell - The Only Timer Your Workout Needs</title>
+    <title>HIITem - The Only Timer Your Workout Needs</title>
     
     <!-- Structured Data -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "WebApplication",
-      "name": "Ten Minutes From Hell",
+      "name": "HIITem",
       "description": "High-intensity workout timer with 11 exercises. Complete a full-body workout in just 11 minutes and 15 seconds.",
-      "url": "https://www.tenminutesfromhell.com",
+      "url": "https://www.hiitem.com",
       "applicationCategory": "HealthApplication",
       "operatingSystem": "Web Browser",
       "offers": {
