--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!doctype html><html lang="en"><head><script>!function(e,t,a,n){e[n]=e[n]||[],e[n].push({"gtm.start":(new Date).getTime(),event:"gtm.js"});var g=t.getElementsByTagName(a)[0],m=t.createElement(a);m.async=!0,m.src="https://www.googletagmanager.com/gtm.js?id=GTM-T7WSDF4Q",g.parentNode.insertBefore(m,g)}(window,document,"script","dataLayer")</script><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,viewport-fit=cover"/><meta name="theme-color" content="#000000"/><meta name="description" content="Ten Minutes From Hell - High-intensity workout timer with 11 exercises. Complete a full-body workout in just 11 minutes and 15 seconds. Start your fitness journey today!"/><meta name="author" content="Ten Minutes From Hell"/><meta name="robots" content="index, follow"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>Ten Minutes From Hell - The Only Timer Your Workout Needs</title><script type="application/ld+json">{
+<!doctype html><html lang="en"><head><script>!function(e,t,a,n){e[n]=e[n]||[],e[n].push({"gtm.start":(new Date).getTime(),event:"gtm.js"});var g=t.getElementsByTagName(a)[0],m=t.createElement(a);m.async=!0,m.src="https://www.googletagmanager.com/gtm.js?id=GTM-T7WSDF4Q",g.parentNode.insertBefore(m,g)}(window,document,"script","dataLayer")</script><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,viewport-fit=cover"/><meta name="theme-color" content="#000000"/><meta name="description" content="HIITem - High-intensity workout timer with 11 exercises. Complete a full-body workout in just 11 minutes and 15 seconds. Start your fitness journey today!"/><meta name="author" content="HIITem"/><meta name="robots" content="index, follow"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>HIITem - The Only Timer Your Workout Needs</title><script type="application/ld+json">{
       "@context": "https://schema.org",
       "@type": "WebApplication",
-      "name": "Ten Minutes From Hell",
+      "name": "HIITem",
       "description": "High-intensity workout timer with 11 exercises. Complete a full-body workout in just 11 minutes and 15 seconds.",
-      "url": "https://www.tenminutesfromhell.com",
+      "url": "https://www.hiitem.com",
       "applicationCategory": "HealthApplication",
       "operatingSystem": "Web Browser",
       "offers": {
@@ -11,4 +11,4 @@
         "price": "0",
         "priceCurrency": "USD"
       }
-    }</script><script defer="defer" src="/static/js/main.0077d520.js"></script><link href="/static/css/main.b8a562b5.css" rel="stylesheet"></head><body><noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T7WSDF4Q" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript><noscript>Every minute on the minute, Pain is what we do.</noscript><div id="root"></div></body></html>
+    }</script><script defer="defer" src="/static/js/main.c44fa63c.js"></script><link href="/static/css/main.8d67a0c2.css" rel="stylesheet"></head><body><noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T7WSDF4Q" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript><noscript>Every minute on the minute, Pain is what we do.</noscript><div id="root"></div></body></html>
