--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,24 @@
     />
     <meta name="author" content="HIITem" />
     <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://www.hiitem.com" />
+
+    <!-- Open Graph (Facebook, LinkedIn, iMessage, etc.) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="HIITem - The Only Timer Your Workout Needs" />
+    <meta property="og:description" content="High-intensity interval workout timer. 10 exercises, 1 minute each, 15 second prep. Complete a full-body HIIT workout in just 10 minutes." />
+    <meta property="og:url" content="https://www.hiitem.com" />
+    <meta property="og:site_name" content="HIITem" />
+    <meta property="og:image" content="https://www.hiitem.com/logo512.png" />
+    <meta property="og:image:width" content="512" />
+    <meta property="og:image:height" content="512" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="HIITem - The Only Timer Your Workout Needs" />
+    <meta name="twitter:description" content="High-intensity interval workout timer. 10 exercises, 1 minute each. Complete a full-body HIIT workout in just 10 minutes." />
+    <meta name="twitter:image" content="https://www.hiitem.com/logo512.png" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
