--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="HIITem - High-intensity workout timer with 11 exercises. Complete a full-body workout in just 11 minutes and 15 seconds. Start your fitness journey today!"
+      content="HIITem - Build and share custom HIIT workouts. High-intensity interval training timer with fully customizable exercises, social features to follow friends, and track your progress."
     />
     <meta name="author" content="HIITem" />
     <meta name="robots" content="index, follow" />
@@ -24,7 +24,7 @@
     <!-- Open Graph (Facebook, LinkedIn, iMessage, etc.) -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="HIITem - The Only Timer Your Workout Needs" />
-    <meta property="og:description" content="High-intensity interval workout timer. 10 exercises, 1 minute each, 15 second prep. Complete a full-body HIIT workout in just 10 minutes." />
+    <meta property="og:description" content="Build and share custom HIIT workouts. Fully customizable interval training timer with social features — follow friends, share completions, and stay accountable." />
     <meta property="og:url" content="https://www.hiitem.com" />
     <meta property="og:site_name" content="HIITem" />
     <meta property="og:image" content="https://www.hiitem.com/logo512.png" />
@@ -34,7 +34,7 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="HIITem - The Only Timer Your Workout Needs" />
-    <meta name="twitter:description" content="High-intensity interval workout timer. 10 exercises, 1 minute each. Complete a full-body HIIT workout in just 10 minutes." />
+    <meta name="twitter:description" content="Build and share custom HIIT workouts. Fully customizable interval training timer with social features — follow friends, share completions, and stay accountable." />
     <meta name="twitter:image" content="https://www.hiitem.com/logo512.png" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -60,7 +60,7 @@
       "@context": "https://schema.org",
       "@type": "WebApplication",
       "name": "HIITem",
-      "description": "High-intensity workout timer with 11 exercises. Complete a full-body workout in just 11 minutes and 15 seconds.",
+      "description": "Build and share custom HIIT workouts. High-intensity interval training timer with fully customizable exercises and social features to follow friends and track progress.",
       "url": "https://www.hiitem.com",
       "applicationCategory": "HealthApplication",
       "operatingSystem": "Web Browser",
