--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,8 @@
     <meta name="twitter:description" content="Build and share custom HIIT workouts. Fully customizable interval training timer with social features — follow friends, share completions, and stay accountable." />
     <meta name="twitter:image" content="https://www.hiitem.com/logo512.png" />
 
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -72,7 +74,7 @@
     }
     </script>
   </head>
-  <body>
+  <body style="background:#000000;margin:0">
     <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T7WSDF4Q"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
