--- a/public/index.html
+++ b/public/index.html
@@ -75,6 +75,7 @@
     </script>
   </head>
   <body style="background:#000000;margin:0">
+    <script>if(window.navigator.standalone||window.matchMedia('(display-mode:standalone)').matches)document.body.classList.add('standalone-pwa');</script>
     <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T7WSDF4Q"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
