--- a/index.html
+++ b/index.html
@@ -11,4 +11,4 @@
         "price": "0",
         "priceCurrency": "USD"
       }
-    }</script><script defer="defer" src="/static/js/main.3a1161b6.js"></script><link href="/static/css/main.44e75b03.css" rel="stylesheet"></head><body style="background:#000;margin:0"><noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T7WSDF4Q" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript><noscript>Every minute on the minute, Pain is what we do.</noscript><div id="root"></div></body></html>
+    }</script><script defer="defer" src="/static/js/main.3a1161b6.js"></script><link href="/static/css/main.2867e0a8.css" rel="stylesheet"></head><body style="background:#000;margin:0"><script>(window.navigator.standalone||window.matchMedia("(display-mode:standalone)").matches)&&document.body.classList.add("standalone-pwa")</script><noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T7WSDF4Q" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript><noscript>Every minute on the minute, Pain is what we do.</noscript><div id="root"></div></body></html>
