--- a/public/index.html
+++ b/public/index.html
@@ -27,15 +27,15 @@
     <meta property="og:description" content="Build and share custom HIIT workouts. Fully customizable interval training timer with social features — follow friends, share completions, and stay accountable." />
     <meta property="og:url" content="https://www.hiitem.com" />
     <meta property="og:site_name" content="HIITem" />
-    <meta property="og:image" content="https://www.hiitem.com/logo512.png" />
-    <meta property="og:image:width" content="512" />
-    <meta property="og:image:height" content="512" />
+    <meta property="og:image" content="https://www.hiitem.com/og-image.webp" />
+    <meta property="og:image:width" content="1170" />
+    <meta property="og:image:height" content="1170" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="HIITem - The Only Timer Your Workout Needs" />
     <meta name="twitter:description" content="Build and share custom HIIT workouts. Fully customizable interval training timer with social features — follow friends, share completions, and stay accountable." />
-    <meta name="twitter:image" content="https://www.hiitem.com/logo512.png" />
+    <meta name="twitter:image" content="https://www.hiitem.com/og-image.webp" />
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
